Fix link colours, add spacing to faq

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
     outline: none;
     -webkit-transition: 0.4s;
     transition: 0.4s;
-    color: #333333;
+    color: #75cbe7;
 }
 
 input:focus,
@@ -51,7 +51,7 @@ a:focus,
 a:hover {
     text-decoration: none;
     outline: none;
-    color: #0e2946;
+    color: #007eff;
 }
 
 img {
